--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/echarts": "^4.4.1",
+    "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "echarts": "^3.3.2",
+    "element-ui": "^2.12.0",
+    "qs": "^6.9.1",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
