--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@types/echarts": "^4.4.1",
     "axios": "^0.19.0",
+    "axios-mock-adapter": "^1.17.0",
     "core-js": "^3.3.2",
     "echarts": "^3.3.2",
     "element-ui": "^2.12.0",
+    "mockjs": "^1.1.0",
     "qs": "^6.9.1",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
