--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "axios": "^0.19.0",
     "axios-mock-adapter": "^1.17.0",
     "core-js": "^3.3.2",
-    "echarts": "^3.3.2",
+    "echarts": "^3.5.2",
     "element-ui": "^2.12.0",
     "mockjs": "^1.1.0",
     "qs": "^6.9.1",
     "register-service-worker": "^1.6.2",
+    "util": "^0.12.1",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-class-component": "^7.0.2",
+    "vue-echarts": "^4.0.4",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
