--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "core-js": "^3.3.2",
     "echarts": "^3.5.2",
     "element-ui": "^2.12.0",
+    "file-saver": "^2.0.2",
     "mockjs": "^1.1.0",
     "qs": "^6.9.1",
     "register-service-worker": "^1.6.2",
+    "script-loader": "^0.7.2",
     "util": "^0.12.1",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
@@ -25,7 +27,8 @@
     "vue-echarts": "^4.0.4",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "xlsx": "^0.15.3"
   },
   "devDependencies": {
     "@types/chai": "^4.1.0",
