--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1",
+    "vuex-class": "^0.3.2",
     "xlsx": "^0.15.3"
   },
   "devDependencies": {
