对测试环境和开发环境进行了配置文件添加，测试环境对应.env.alpha，正式环境对应.env.build

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --mode build",
+    "alpha": "vue-cli-service build --mode alpha",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
