--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/echarts": "^4.4.1",
     "axios": "^0.19.0",
     "axios-mock-adapter": "^1.17.0",
+    "compression-webpack-plugin": "^3.0.0",
     "core-js": "^3.3.2",
     "echarts": "^3.5.2",
     "element-ui": "^2.12.0",
