--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1",
     "vuex-class": "^0.3.2",
+    "webpack-bundle-analyzer": "^3.6.0",
     "xlsx": "^0.15.3"
   },
   "devDependencies": {
